<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ScreenInfo</string>

    <string name="about_menu">About</string>
    <string name="share_menu">Share</string>
    <string name="about_title">ScreenInfo</string>
    <string name="version">Version</string>
    <string name="share_summary_subject">Display report from ScreenInfo</string>
    <string name="share_title">Share Report To</string>
    <string name="about">Displays the screen configuration parameters for an Android device.</string>
    <string name="email">Email: info@jotabout.com</string>
    <string name="blog">Blog: digitaldumptruck.jotabout.com</string>
    <string name="about_dismiss">That\'s nice</string>
	<string name="play_store_link">Report prepared by ScreenInfo. Get yourself a copy: https://play.google.com/store/apps/details?id=com.jotabout.screeninfo</string>

	<string name="selector">(default)</string>
	<string name="device_label">Device Name:</string>
	<string name="os_version_label">Android Version:</string>
    <string name="screen_class_label">Screen class:</string>
    <string name="density_class_label">Density class:</string>
	<string name="width_pixels_label">App-usable Width (px):</string>
	<string name="height_pixels_label">App-usable Height (px):</string>
	<string name="width_dp_label">Width (dp):</string>
	<string name="height_dp_label">Height (dp):</string>
	<string name="smallest_dp_label">Smallest DP:</string>
	<string name="nominal_dpi_label">Nominal Screen DPI:</string>
	<string name="actual_xdpi_label">Actual X DPI:</string>
	<string name="actual_ydpi_label">Actual Y DPI:</string>
	<string name="logical_density_label">Logical Density:</string>
	<string name="font_scale_density_label">Font Scale Density:</string>
	<string name="screen_diagonal_size_inches_label">Calc’d Diag - Screen - (inches):</string>
	<string name="screen_diagonal_size_mm_label">Calc’d Diag - Screen - (mm):</string>
	<string name="screen_width_size_inches_label">Width Size - Screen - (inches):</string>
	<string name="screen_width_size_mm_label">Width Size - Screen - (mm):</string>
	<string name="screen_height_size_inches_label">Height Size - Screen - (inches):</string>
	<string name="screen_height_size_mm_label">Height Size - Screen - (mm):</string>
	<string name="xy_diagonal_size_inches_label">Diag Size - X + Y - (inches):</string>
	<string name="xy_diagonal_size_mm_label">Diag Size - X + Y - (mm):</string>
	<string name="xy_width_size_inches_label">Width Size - X + Y - (inches):</string>
	<string name="xy_width_size_mm_label">Width Size - X + Y - (mm):</string>
	<string name="xy_height_size_inches_label">Height Size - X + Y - (inches):</string>
	<string name="xy_height_size_mm_label">Height Size - X + Y - (mm):</string>

	<string name="touchscreen_label">Touchscreen:</string>
	<string name="touchscreen_none">None</string>
	<string name="touchscreen_finger">Finger</string>
	<string name="touchscreen_stylus">Stylus</string>
			
	<string name="natural_orientation_label">Natural Orientation:</string>	
	<string name="current_orientation_label">Current Orientation:</string>
	<string name="orientation_square">Square</string>
	<string name="orientation_landscape">Landscape</string>
	<string name="orientation_portrait">Portrait</string>
	<string name="degrees_0">0°</string>
	<string name="degrees_90">90°</string>
	<string name="degrees_180">180°</string>
	<string name="degrees_270">270°</string>

	<string name="a_8">A_8</string>
	<string name="jpeg">JPEG</string>
	<string name="l_8">L_*</string>
	<string name="la_88">LA_88</string>
	<string name="opaque">OPAQUE</string>
	<string name="rgb_332">RGB_332</string>
	<string name="rgb_565">RGB_565</string>
	<string name="rgb_888">RGB_888</string>
	<string name="rgba_4444">RGBA_4444</string>
	<string name="rgba_5551">RGBA_5551</string>
	<string name="rgba_8888">RGBA_8888</string>
	<string name="rgbx_8888">RGBX_8888</string>
	<string name="bgra_8888">BGRA_8888</string>
	<string name="translucent">TRANSLUCENT</string>
	<string name="transparent">TRANSPARENT</string>
	<string name="nv21">NV21</string>
	<string name="yuy2">YUY2</string>
	<string name="nv16">NV16</string>

	<string name="long_wide_label">Long or Wide:</string>
 
	<string name="pixel_format_label">Pixel Format:</string>
	<string name="refresh_rate_label">Refresh Rate (fps):</string>
    <string name="total_width_pixels_label">Total Width (px):</string>
    <string name="total_height_pixels_label">Total Height (px):</string>

	<string name="yes">Yes</string>
	<string name="no">No</string>	
	<string name="small">small</string>
	<string name="normal">normal</string>	
	<string name="large">large</string>
	<string name="xlarge">xlarge</string>
	<string name="undefined">undefined</string>
	<string name="unknown">Unknown</string>
    <string name="unsupported">Not Available</string>
	<string name="ldpi">ldpi</string>
	<string name="mdpi">ldpi</string>
	<string name="tvdpi">tvdpi</string>
	<string name="hdpi">hdpi</string>
	<string name="xhdpi">xhdpi</string>
	<string name="xxhdpi">xxhdpi</string>
	<string name="xxxhdpi">xxxhdpi</string>
	<string name="nosuch">\?%d</string>
</resources>
