<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	
		<TableLayout
			android:id="@+id/device_header"
			android:layout_width="match_parent"
	    	android:layout_height="wrap_content">
			<TableRow>
				<TextView
					android:id="@+id/device_label"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginRight="@dimen/label_spacing"
				    android:textAppearance="@style/label"
				    android:text="@string/device_label"/>
				<TextView
					android:id="@+id/device_name"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"/>		
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/os_version_label"
					android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
				    android:layout_marginRight="@dimen/label_spacing"
				    android:textAppearance="@style/label"
			    	android:text="@string/os_version_label"/>
			    
				<TextView
					android:id="@+id/os_version"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"/>		
			</TableRow>
		</TableLayout>
		
		<View
			android:layout_width="match_parent"
			android:layout_height="30dp"
			android:background="@drawable/rule_line"/>
	
		<LinearLayout
			android:id="@+id/display"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/os_version_label"
		>
			<TextView
				android:id="@+id/screen_size_name"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
			/>
			<TextView
				android:id="@+id/screen_dpi_name"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
			/>
	    </LinearLayout>
		 
		<View
			android:layout_width="match_parent"
			android:layout_height="30dp"
			android:background="@drawable/rule_line"/>

		<TableLayout
			android:id="@+id/stats_table"
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/display">
			<TableRow>
				<TextView
					android:id="@+id/width_pixels_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/width_pixels_label"/>
				<TextView
					android:id="@+id/width_pixels"/>	
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/height_pixels_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/height_pixels_label"/>
				<TextView
					android:id="@+id/height_pixels"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/long_wide_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/long_wide_label"/>
				<TextView
					android:id="@+id/long_wide"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/natural_orientation_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/natural_orientation_label"/>
				<TextView
					android:id="@+id/natural_orientation"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/current_orientation_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/current_orientation_label"/>
				<TextView
					android:id="@+id/current_orientation"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/touchscreen_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/touchscreen_label"/>
				<TextView
					android:id="@+id/touchscreen"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/screen_dpi_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/screen_dpi_label"/>
				<TextView
					android:id="@+id/screen_dpi"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/actual_xdpi_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/actual_xdpi_label"/>
				<TextView
					android:id="@+id/actual_xdpi"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/actual_ydpi_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/actual_ydpi_label"/>
				<TextView
					android:id="@+id/actual_ydpi"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/logical_density_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/logical_density_label"/>
				<TextView
					android:id="@+id/logical_density"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/font_scale_density_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/font_scale_density_label"/>
				<TextView
					android:id="@+id/font_scale_density"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/screen_diagonal_size_inches_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/screen_diagonal_size_inches_label"/>
				<TextView
					android:id="@+id/screen_diagonal_size_inches"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/xy_diagonal_size_inches_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/xy_diagonal_size_inches_label"/>
				<TextView
					android:id="@+id/xy_diagonal_size_inches"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/screen_width_size_inches_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/screen_width_size_inches_label"/>
				<TextView
					android:id="@+id/screen_width_size_inches"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/xy_width_size_inches_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/xy_width_size_inches_label"/>
				<TextView
					android:id="@+id/xy_width_size_inches"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/screen_height_size_inches_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/screen_height_size_inches_label"/>
				<TextView
					android:id="@+id/screen_height_size_inches"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/xy_height_size_inches_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/xy_height_size_inches_label"/>
				<TextView
					android:id="@+id/xy_height_size_inches"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/screen_diagonal_size_mm_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/screen_diagonal_size_mm_label"/>
				<TextView
					android:id="@+id/screen_diagonal_size_mm"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/xy_diagonal_size_mm_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/xy_diagonal_size_mm_label"/>
				<TextView
					android:id="@+id/xy_diagonal_size_mm"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/screen_width_size_mm_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/screen_width_size_mm_label"/>
				<TextView
					android:id="@+id/screen_width_size_mm"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/xy_width_size_mm_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/xy_width_size_mm_label"/>
				<TextView
					android:id="@+id/xy_width_size_mm"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/screen_height_size_mm_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/screen_height_size_mm_label"/>
				<TextView
					android:id="@+id/screen_height_size_mm"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/xy_height_size_mm_label"
					android:textAppearance="@style/label"
				    android:layout_marginRight="@dimen/label_spacing"
					android:text="@string/xy_height_size_mm_label"/>
				<TextView
					android:id="@+id/xy_height_size_mm"/>
			</TableRow>
		</TableLayout>
	
	</LinearLayout>
</ScrollView>
